2013-08-27  Roland Levillain  <roland@lrde.epita.fr>

	Remove Scribo debug code making side effects on streams.

	* scribo/core/line_set.hh,
	* scribo/core/object_groups.hh,
	* scribo/core/paragraph_set.hh,
	* scribo/preprocessing/deskew_crop.hh,
	* scribo/primitive/extract/non_text_kmean.hh:
	Here.

2013-08-26  Roland Levillain  <roland@lrde.epita.fr>

	Improve the generation of Doxyfiles in Scribo.

	* doc/Makefile.am (edit)
	($(srcdir)/user-refman.stamp)
	($(srcdir)/devel-refman.stamp):
	Use `[@]' instead of `\@' for portability reasons.
	(ID): New (empty).
	(edit_devel): Prevent configure from expanding @builddir@.
	Christen the product as ``Developer documentation''.
	($(DOXYFILE_USER), $(DOXYFILE_DEVEL)): Do not depend on $Id$ from
	ChangeLog.
	* doc/Doxyfile.in (PROJECT_NUMBER): Reintegrate @ID@ to the
	project number, even if it is not yet set.

2013-08-22  Roland Levillain  <roland@lrde.epita.fr>

	Slightly improve Scribo's tests/primitive/extract/alignments.cc.

	* tests/primitive/extract/alignments.cc (main): Pass an actual
	literal float as second argument to
	scribo::primitive::extract::alignments.
	Add a Doxygen header.
	Cosmetic changes.

2013-08-22  Roland Levillain  <roland@lrde.epita.fr>

	* scribo/primitive/extract/alignments.hh: Fix Doxygen comments.

2013-07-31  Roland Levillain  <roland@lrde.epita.fr>

	Fix the distribution of Scribo.

	* src/Makefile.am (EXTRA_DIST): Remove afp/components.hh,
	afp/link.hh and afp/regroup.hh.

2013-07-30  Roland Levillain  <roland@lrde.epita.fr>

	Fix resizing code in toolchain::internal::text_in_picture_functor.

	* scribo/toolchain/internal/text_in_picture_functor.hh
	(text_in_picture_functor<I>::get_factor): New precondition: ensure
	argument `max_dim_size', used as denominator, is non null.
	(text_in_picture_functor<I>::operator()): Do not resize the image
	if `max_dim_size' is null.
	Some cosmetic changes.

2013-07-30  Roland Levillain  <roland@lrde.epita.fr>

	Add missing `mln' namespace qualifiers.
